[package]
name = "samp-precise-timers"
version = "1.0.0"
authors = ["Brian Misiak <bm@net4game.com>"]
edition = "2018"
license = "LGPL-3.0-only"
readme = "README.md"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
samp = { git = "https://github.com/ZOTTCE/samp-rs.git", rev = "2e9192713bf9a77ee04e0ebbcda37d078c9c47dd" }
slab = "0.4.2"
log = "0.4.6"
fern = "0.5.9"
priority-queue = "1.3.0"
once_cell = "1.19.0"
fnv = "1.0.7"
anyhow = "1.0.80"
thiserror = "1.0.57"

[profile.release]
lto = true
