[package]
name = "samp-precise-timers"
version = "1.0.0"
authors = ["Brian Misiak <bm@net4game.com>"]
edition = "2021"
license = "LGPL-3.0-only"
readme = "README.md"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
samp = { git = "https://github.com/bmisiak/samp-sdk.git", rev = "41e94ed94ee83667ff1055590d4ec6e3c290371b" }
slab = "0.4.2"
log = "0.4.6"
fern = { version = "0.6", features = [] }
snafu = "0.8.0"

[profile.release]
lto = true
